FFS/pre_firewall_changes.txt
# Generated by iptables-save v1.6.1 on Sun Mar  3 19:02:12 2019
*raw
:PREROUTING ACCEPT [1597818:1051242024]
:OUTPUT ACCEPT [1174155:127790268]
COMMIT
# Completed on Sun Mar  3 19:02:12 2019
# Generated by iptables-save v1.6.1 on Sun Mar  3 19:02:12 2019
*security
:INPUT ACCEPT [1594575:1051051848]
:FORWARD ACCEPT [2261:176358]
:OUTPUT ACCEPT [1174664:127840692]
COMMIT
# Completed on Sun Mar  3 19:02:12 2019
# Generated by iptables-save v1.6.1 on Sun Mar  3 19:02:12 2019
*mangle
:PREROUTING ACCEPT [1648363:1079075153]
:INPUT ACCEPT [1644603:1078647621]
:FORWARD ACCEPT [2261:176358]
:OUTPUT ACCEPT [1218164:134459863]
:POSTROUTING ACCEPT [1221488:134777898]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Sun Mar  3 19:02:12 2019
# Generated by iptables-save v1.6.1 on Sun Mar  3 19:02:12 2019
*nat
:PREROUTING ACCEPT [6469:677260]
:INPUT ACCEPT [2762:261262]
:OUTPUT ACCEPT [68413:4583696]
:POSTROUTING ACCEPT [70674:4760054]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sun Mar  3 19:02:12 2019
# Generated by iptables-save v1.6.1 on Sun Mar  3 19:02:12 2019
*filter
:INPUT ACCEPT [707881:340464957]
:FORWARD ACCEPT [2261:176358]
:OUTPUT ACCEPT [583008:55245334]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sun Mar  3 19:02:12 2019
